--- a/doctor.html
+++ b/doctor.html
@@ -178,6 +178,7 @@
     <script src="assets/js/library.functions.js"></script>
     <script src="assets/js/plugin.messages.js"></script>
     <script src="assets/js/plugin.slider.js"></script>
+    <script src="assets/js/language.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
