Add Services Component

--- a/index.html
+++ b/index.html
@@ -122,6 +122,61 @@
           </div>
         </div>
       </div>
+      <div class="section theme--first-header size--container">
+        <div class="component type--section">
+          <div class="section__title">
+            <div class="content">
+              our services
+            </div>
+          </div>
+          <div class="section__content">
+            <div class="component type--services">
+              <div class="services">
+                <div class="service">
+                  <div class="image">
+                    <a href="service.html"><img src="files/images/service-1.jpg" alt="" /></a>
+                  </div>
+                  <div class="information">
+                    <div class="name">
+                      <a href="service.html">serve name</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="service">
+                  <div class="image">
+                    <a href="service.html"><img src="files/images/service-2.jpg" alt="" /></a>
+                  </div>
+                  <div class="information">
+                    <div class="name">
+                      <a href="service.html">serve name</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="service">
+                  <div class="image">
+                    <a href="service.html"><img src="files/images/service-3.jpg" alt="" /></a>
+                  </div>
+                  <div class="information">
+                    <div class="name">
+                      <a href="service.html">serve name</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="service">
+                  <div class="image">
+                    <a href="service.html"><img src="files/images/service-4.jpg" alt="" /></a>
+                  </div>
+                  <div class="information">
+                    <div class="name">
+                      <a href="service.html">serve name</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="section theme--light size--container">
