Add Service Component

--- a/service.html
+++ b/service.html
@@ -67,6 +67,38 @@
           </div>
         </div>
       </div>
+      <div class="section size--container">
+        <div class="component type--service">
+          <div class="image">
+            <img src="files/images/service-1.jpg" alt="" />
+          </div>
+          <div class="information">
+            <div class="name">
+              serve name
+            </div>
+            <div class="description">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ipsum rerum architecto neque distinctio aperiam molestias! Doloribus necessitatibus, culpa nulla cum dignissimos sequi, earum ut neque veritatis consequuntur corrupti at!
+              </p>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus modi, corrupti fugit cumque animi explicabo, eius non rem magnam odit molestias ab illo. Inventore cumque aspernatur laborum molestiae, natus sit?
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia minus harum tempora maxime reprehenderit ullam, nam unde id eius repellendus asperiores molestiae, dignissimos dolores libero quae ad iste voluptatem numquam.
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint commodi cum explicabo numquam id dignissimos perferendis labore, beatae alias unde delectus facere nisi quis temporibus fuga culpa, in adipisci pariatur.
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati voluptatibus quos quod, delectus odit consequuntur alias. Quod illum, cum, tempore, sint facilis nobis corporis id dignissimos eius facere ullam ratione!
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex earum illum repudiandae porro atque ipsum culpa dignissimos ducimus. Placeat natus consequuntur id explicabo hic eveniet blanditiis reprehenderit officiis doloremque perspiciatis.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="section theme--light size--container">
