Add Component Doctor

--- a/doctor.html
+++ b/doctor.html
@@ -67,6 +67,49 @@
           </div>
         </div>
       </div>
+      <div class="section size--container">
+        <div class="component type--doctor">
+          <div class="image">
+            <img src="files/images/doctor-1.png" alt="" />
+          </div>
+          <div class="information">
+            <div class="label">
+              name
+            </div>
+            <div class="name">
+              doctor
+            </div>
+            <div class="label">
+              about
+            </div>
+            <div class="description">
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit quis inventore ullam labore repellendus, nostrum vero placeat? Aut esse vero ipsa numquam hic perspiciatis commodi architecto omnis, inventore, repellendus distinctio!
+              </p>
+            </div>
+            <div class="label">
+              phone
+            </div>
+            <div class="title">
+              000-0000-000
+            </div>
+            <div class="label">
+              email
+            </div>
+            <div class="title">
+              doctor@dentist.com
+            </div>
+            <div class="label">
+              address
+            </div>
+            <div class="description">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="section theme--light size--container">
