Add Registration Form Comonent

--- a/registration.html
+++ b/registration.html
@@ -67,6 +67,45 @@
           </div>
         </div>
       </div>
+      <div class="section size--container">
+        <div class="component type--registration-form-messages">
+          <div class="messages">
+          </div>
+        </div>
+        <div class="component type--registration-form">
+          <form class="form" action="index.html" method="POST">
+            <div class="inputs">
+              <div class="input style--center type--image">
+                <div class="image image-input">
+                </div>
+                <input class="image-input-field" type="file" name="image" />
+              </div>
+              <div class="input style--center">
+                <input type="text" name="user" placeholder="user name" />
+              </div>
+              <div class="input">
+                <label>passowrd</label>
+                <input type="password" name="password" placeholder="password" />
+              </div>
+              <div class="input">
+                <label>repeat password</label>
+                <input type="password" name="password-confirm" placeholder="repeat password" />
+              </div>
+              <div class="input">
+                <label>email</label>
+                <input type="email" name="email" placeholder="email" />
+              </div>
+              <div class="input">
+                <label>phone</label>
+                <input type="text" name="phone" placeholder="phone" />
+              </div>
+              <div class="input style--full">
+                <input type="submit" value="sign up" />
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="section theme--light size--container">
