Add (Social links - App links) Components

--- a/service.html
+++ b/service.html
@@ -195,7 +195,23 @@
       <div class="section theme--dark size--container">
         <div class="component type--footer">
           <div>
-            Copyright © 2018 <a href="index.html">dentist.com</a>
+            <ul class="component type--social-links">
+              <li><a href="index.html" target="_blank"><i class="fab fa-instagram"></i></a></li>
+              <li><a href="index.html" target="_blank"><i class="fab fa-twitter"></i></a></li>
+              <li><a href="index.html" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+              <li><a href="index.html" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
+              <li><a href="index.html" target="_blank"><i class="fab fa-youtube"></i></a></li>
+              <li><a href="index.html" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+            </ul>
+            <p>
+              Copyright © 2018 <a href="index.html">dentist.com</a>
+            </p>
+          </div>
+          <div>
+            <ul class="component type--apps-links">
+              <li><a href="#" target="_blank"><img src="files/images/get-it-on-google-play.png" alt=""></a></li>
+              <li><a href="#" target="_blank"><img src="files/images/download-on-the-app-store.png" alt=""></a></li>
+            </ul>
           </div>
         </div>
       </div>
