Add News Component

--- a/index.html
+++ b/index.html
@@ -177,6 +177,66 @@
           </div>
         </div>
       </div>
+      <div class="section size--container">
+        <div class="component type--section">
+          <div class="section__title">
+            <div class="content">
+              news
+            </div>
+          </div>
+          <div class="section__content">
+            <div class="component type--news">
+              <div class="news-items">
+                <div class="news-item">
+                  <div class="image">
+                    <a href="service.html"><img src="files/images/news-1.jpg" alt="" /></a>
+                  </div>
+                  <div class="information">
+                    <div class="name">
+                      <a href="service.html">news title</a>
+                    </div>
+                    <div class="description">
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis sint nam magnam consectetur. Totam commodi veniam ad temporibus voluptas amet sit hic excepturi fugiat deserunt! Natus ab voluptatibus beatae rem?
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="news-item">
+                  <div class="image">
+                    <a href="news.html"><img src="files/images/news-2.jpg" alt="" /></a>
+                  </div>
+                  <div class="information">
+                    <div class="name">
+                      <a href="news.html">news title</a>
+                    </div>
+                    <div class="description">
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, a, adipisci nisi neque et delectus officiis voluptas accusantium sint culpa ipsum cumque ea repellat, quod exercitationem eos soluta pariatur quam.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="news-item">
+                  <div class="image">
+                    <a href="news.html"><img src="files/images/news-3.jpg" alt="" /></a>
+                  </div>
+                  <div class="information">
+                    <div class="name">
+                      <a href="news.html">news title</a>
+                    </div>
+                    <div class="description">
+                      <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam mollitia neque et perspiciatis nemo nostrum nesciunt quam, dolorem vero non repellendus aliquid velit dignissimos dicta, deleniti natus facere minus consequuntur.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="section theme--light size--container">
