Convert (Services - News) Component to Articles Component & Service Component to Article Component

--- a/article.html
+++ b/article.html
@@ -57,24 +57,24 @@
           </div>
           <div class="information">
             <div class="title">
-              service
+              article
             </div>
             <div class="description">
               <p>
-                service
+                article
               </p>
             </div>
           </div>
         </div>
       </div>
       <div class="section size--container">
-        <div class="component type--service">
+        <div class="component type--article">
           <div class="image">
-            <img src="files/images/service-1.jpg" alt="" />
+            <img src="files/images/article-1.jpg" alt="" />
           </div>
           <div class="information">
             <div class="name">
-              serve name
+              article name
             </div>
             <div class="description">
               <p>
