--- a/index.html
+++ b/index.html
@@ -130,45 +130,45 @@
             </div>
           </div>
           <div class="section__content">
-            <div class="component type--services">
-              <div class="services">
-                <div class="service">
+            <div class="component type--articles theme--services">
+              <div class="articles">
+                <div class="article">
                   <div class="image">
-                    <a href="service.html"><img src="files/images/service-1.jpg" alt="" /></a>
+                    <a href="article.html"><img src="files/images/article-1.jpg" alt="" /></a>
                   </div>
                   <div class="information">
                     <div class="name">
-                      <a href="service.html">serve name</a>
+                      <a href="article.html">serve name</a>
                     </div>
                   </div>
                 </div>
-                <div class="service">
+                <div class="article">
                   <div class="image">
-                    <a href="service.html"><img src="files/images/service-2.jpg" alt="" /></a>
+                    <a href="article.html"><img src="files/images/article-2.jpg" alt="" /></a>
                   </div>
                   <div class="information">
                     <div class="name">
-                      <a href="service.html">serve name</a>
+                      <a href="article.html">serve name</a>
                     </div>
                   </div>
                 </div>
-                <div class="service">
+                <div class="article">
                   <div class="image">
-                    <a href="service.html"><img src="files/images/service-3.jpg" alt="" /></a>
+                    <a href="article.html"><img src="files/images/article-3.jpg" alt="" /></a>
                   </div>
                   <div class="information">
                     <div class="name">
-                      <a href="service.html">serve name</a>
+                      <a href="article.html">serve name</a>
                     </div>
                   </div>
                 </div>
-                <div class="service">
+                <div class="article">
                   <div class="image">
-                    <a href="service.html"><img src="files/images/service-4.jpg" alt="" /></a>
+                    <a href="article.html"><img src="files/images/article-4.jpg" alt="" /></a>
                   </div>
                   <div class="information">
                     <div class="name">
-                      <a href="service.html">serve name</a>
+                      <a href="article.html">serve name</a>
                     </div>
                   </div>
                 </div>
@@ -185,15 +185,15 @@
             </div>
           </div>
           <div class="section__content">
-            <div class="component type--news">
-              <div class="news-items">
-                <div class="news-item">
+            <div class="component type--articles theme--news">
+              <div class="articles">
+                <div class="article">
                   <div class="image">
-                    <a href="service.html"><img src="files/images/news-1.jpg" alt="" /></a>
+                    <a href="article.html"><img src="files/images/article-5.jpg" alt="" /></a>
                   </div>
                   <div class="information">
                     <div class="name">
-                      <a href="service.html">news title</a>
+                      <a href="article.html">news title</a>
                     </div>
                     <div class="description">
                       <p>
@@ -202,13 +202,13 @@
                     </div>
                   </div>
                 </div>
-                <div class="news-item">
+                <div class="article">
                   <div class="image">
-                    <a href="news.html"><img src="files/images/news-2.jpg" alt="" /></a>
+                    <a href="article.html"><img src="files/images/article-6.jpg" alt="" /></a>
                   </div>
                   <div class="information">
                     <div class="name">
-                      <a href="news.html">news title</a>
+                      <a href="article.html">news title</a>
                     </div>
                     <div class="description">
                       <p>
@@ -217,13 +217,13 @@
                     </div>
                   </div>
                 </div>
-                <div class="news-item">
+                <div class="article">
                   <div class="image">
-                    <a href="news.html"><img src="files/images/news-3.jpg" alt="" /></a>
+                    <a href="article.html"><img src="files/images/article-7.jpg" alt="" /></a>
                   </div>
                   <div class="information">
                     <div class="name">
-                      <a href="news.html">news title</a>
+                      <a href="article.html">news title</a>
                     </div>
                     <div class="description">
                       <p>
