Add Options in Section Component

--- a/news.html
+++ b/news.html
@@ -50,137 +50,24 @@
       </div>
     </header>
     <main>
-      <div class="section theme--slider size--container">
-        <div class="component type--main-slider">
-          <div class="slides">
-            <div class="slide active">
-              <div class="image">
-                <img src="files/images/slide-1.svg" alt="" />
-              </div>
-              <div class="information">
-                <div class="title">
-                  <a href="service.html">dentical service for our clients</a>
-                </div>
-                <div class="description">
-                  <p>
-                    we provide you a dentical services to help you shine with a smile.
-                  </p>
-                </div>
-                <div class="links">
-                  <a class="link" href="service.html">read more here <span class="ltr-only">»</span><span class="rtl-only">«</span></a>
-                </div>
-              </div>
-            </div>
-            <div class="slide">
-              <div class="image">
-                <img src="files/images/slide-1.svg" alt="" />
-              </div>
-              <div class="information">
-                <div class="title">
-                  <a href="service.html">dentical service for our clients</a>
-                </div>
-                <div class="description">
-                  <p>
-                    we provide you a dentical services to help you shine with a smile.
-                  </p>
-                </div>
-                <div class="links">
-                  <a class="link" href="service.html">read more here <span class="ltr-only">»</span><span class="rtl-only">«</span></a>
-                </div>
-              </div>
-            </div>
-            <div class="slide">
-              <div class="image">
-                <img src="files/images/slide-1.svg" alt="" />
-              </div>
-              <div class="information">
-                <div class="title">
-                  <a href="service.html">dentical service for our clients</a>
-                </div>
-                <div class="description">
-                  <p>
-                    we provide you a dentical services to help you shine with a smile.
-                  </p>
-                </div>
-                <div class="links">
-                  <a class="link" href="service.html">read more here <span class="ltr-only">»</span><span class="rtl-only">«</span></a>
-                </div>
-              </div>
-            </div>
+      <div class="section theme--cover">
+        <div class="component type--cover">
+          <div class="image">
+            <img src="files/images/cover.jpg" alt="" />
           </div>
-          <div class="controllers">
-            <div class="navigator">
-              <div class="controller next">
-                <i class="fas fa-chevron-right ltr-only"></i>
-                <i class="fas fa-chevron-left rtl-only"></i>
-              </div>
-              <div class="controller previous">
-                <i class="fas fa-chevron-left ltr-only"></i>
-                <i class="fas fa-chevron-right rtl-only"></i>
-              </div>
+          <div class="information">
+            <div class="title">
+              news
+            </div>
+            <div class="description">
+              <p>
+                news
+              </p>
             </div>
           </div>
         </div>
       </div>
       <div class="section theme--first-header size--container">
-        <div class="component type--section">
-          <div class="section__title">
-            <div class="content">
-              our services
-            </div>
-          </div>
-          <div class="section__content">
-            <div class="component type--articles theme--services">
-              <div class="articles">
-                <div class="article">
-                  <div class="image">
-                    <a href="article.html"><img src="files/images/article-1.jpg" alt="" /></a>
-                  </div>
-                  <div class="information">
-                    <div class="name">
-                      <a href="article.html">serve name</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="article">
-                  <div class="image">
-                    <a href="article.html"><img src="files/images/article-2.jpg" alt="" /></a>
-                  </div>
-                  <div class="information">
-                    <div class="name">
-                      <a href="article.html">serve name</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="article">
-                  <div class="image">
-                    <a href="article.html"><img src="files/images/article-3.jpg" alt="" /></a>
-                  </div>
-                  <div class="information">
-                    <div class="name">
-                      <a href="article.html">serve name</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="article">
-                  <div class="image">
-                    <a href="article.html"><img src="files/images/article-4.jpg" alt="" /></a>
-                  </div>
-                  <div class="information">
-                    <div class="name">
-                      <a href="article.html">serve name</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="section__options">
-            <div class="section__option"><a href="services.html">more</a></div>
-          </div>
-        </div>
-      </div>
-      <div class="section size--container">
         <div class="component type--section">
           <div class="section__title">
             <div class="content">
@@ -237,9 +124,6 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="section__options">
-            <div class="section__option"><a href="news.html">more</a></div>
           </div>
         </div>
       </div>
