--- a/services.html
+++ b/services.html
@@ -50,74 +50,19 @@
       </div>
     </header>
     <main>
-      <div class="section theme--slider size--container">
-        <div class="component type--main-slider">
-          <div class="slides">
-            <div class="slide active">
-              <div class="image">
-                <img src="files/images/slide-1.svg" alt="" />
-              </div>
-              <div class="information">
-                <div class="title">
-                  <a href="service.html">dentical service for our clients</a>
-                </div>
-                <div class="description">
-                  <p>
-                    we provide you a dentical services to help you shine with a smile.
-                  </p>
-                </div>
-                <div class="links">
-                  <a class="link" href="service.html">read more here <span class="ltr-only">»</span><span class="rtl-only">«</span></a>
-                </div>
-              </div>
-            </div>
-            <div class="slide">
-              <div class="image">
-                <img src="files/images/slide-1.svg" alt="" />
-              </div>
-              <div class="information">
-                <div class="title">
-                  <a href="service.html">dentical service for our clients</a>
-                </div>
-                <div class="description">
-                  <p>
-                    we provide you a dentical services to help you shine with a smile.
-                  </p>
-                </div>
-                <div class="links">
-                  <a class="link" href="service.html">read more here <span class="ltr-only">»</span><span class="rtl-only">«</span></a>
-                </div>
-              </div>
-            </div>
-            <div class="slide">
-              <div class="image">
-                <img src="files/images/slide-1.svg" alt="" />
-              </div>
-              <div class="information">
-                <div class="title">
-                  <a href="service.html">dentical service for our clients</a>
-                </div>
-                <div class="description">
-                  <p>
-                    we provide you a dentical services to help you shine with a smile.
-                  </p>
-                </div>
-                <div class="links">
-                  <a class="link" href="service.html">read more here <span class="ltr-only">»</span><span class="rtl-only">«</span></a>
-                </div>
-              </div>
-            </div>
+      <div class="section theme--cover">
+        <div class="component type--cover">
+          <div class="image">
+            <img src="files/images/cover.jpg" alt="" />
           </div>
-          <div class="controllers">
-            <div class="navigator">
-              <div class="controller next">
-                <i class="fas fa-chevron-right ltr-only"></i>
-                <i class="fas fa-chevron-left rtl-only"></i>
-              </div>
-              <div class="controller previous">
-                <i class="fas fa-chevron-left ltr-only"></i>
-                <i class="fas fa-chevron-right rtl-only"></i>
-              </div>
+          <div class="information">
+            <div class="title">
+              services
+            </div>
+            <div class="description">
+              <p>
+                services
+              </p>
             </div>
           </div>
         </div>
@@ -126,7 +71,7 @@
         <div class="component type--section">
           <div class="section__title">
             <div class="content">
-              our services
+              services
             </div>
           </div>
           <div class="section__content">
@@ -174,72 +119,6 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="section__options">
-            <div class="section__option"><a href="services.html">more</a></div>
-          </div>
-        </div>
-      </div>
-      <div class="section size--container">
-        <div class="component type--section">
-          <div class="section__title">
-            <div class="content">
-              news
-            </div>
-          </div>
-          <div class="section__content">
-            <div class="component type--articles theme--news">
-              <div class="articles">
-                <div class="article">
-                  <div class="image">
-                    <a href="article.html"><img src="files/images/article-5.jpg" alt="" /></a>
-                  </div>
-                  <div class="information">
-                    <div class="name">
-                      <a href="article.html">news title</a>
-                    </div>
-                    <div class="description">
-                      <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis sint nam magnam consectetur. Totam commodi veniam ad temporibus voluptas amet sit hic excepturi fugiat deserunt! Natus ab voluptatibus beatae rem?
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <div class="article">
-                  <div class="image">
-                    <a href="article.html"><img src="files/images/article-6.jpg" alt="" /></a>
-                  </div>
-                  <div class="information">
-                    <div class="name">
-                      <a href="article.html">news title</a>
-                    </div>
-                    <div class="description">
-                      <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, a, adipisci nisi neque et delectus officiis voluptas accusantium sint culpa ipsum cumque ea repellat, quod exercitationem eos soluta pariatur quam.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <div class="article">
-                  <div class="image">
-                    <a href="article.html"><img src="files/images/article-7.jpg" alt="" /></a>
-                  </div>
-                  <div class="information">
-                    <div class="name">
-                      <a href="article.html">news title</a>
-                    </div>
-                    <div class="description">
-                      <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam mollitia neque et perspiciatis nemo nostrum nesciunt quam, dolorem vero non repellendus aliquid velit dignissimos dicta, deleniti natus facere minus consequuntur.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="section__options">
-            <div class="section__option"><a href="news.html">more</a></div>
           </div>
         </div>
       </div>
