--- a/treatment.html
+++ b/treatment.html
@@ -23,21 +23,21 @@
           </a>
           <button class="header-switcher"><i class="fas fa-bars"></i></button>
           <div class="user">
-            <form class="form" action="index.html" method="POST">
+            <!-- <form class="form" action="profile.html" method="POST">
               <input type="text" name="user" placeholder="user name" />
               <input type="password" name="password" placeholder="password" />
               <input type="submit" value="login" />
               <span>or</span>
               <a href="registration.html">sign up</a>
-            </form>
-            <!-- <ul class="links">
-              <li><a class="link active" href="index.html">home</a></li>
+            </form> -->
+            <ul class="links">
+              <li><a class="link" href="index.html">home</a></li>
               <li><a class="link" href="appointment.html">appointment</a></li>
-              <li><a class="link" href="treatment.html">treatment</a></li>
+              <li><a class="link active" href="treatment.html">treatment</a></li>
               <li><a class="link" href="invoices.html">invoices</a></li>
-              <li><a class="link" href="profile.html">profile</a></li>
+              <li><a class="link" href="login.html">login</a></li>
             </ul>
-            <div class="card">
+            <!-- <div class="card">
               <a class="image" href="profile.html">
                 <img src="files/images/user.png" alt="" />
               </a>
